<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_main"
        android:textSize="@dimen/user_register_size"
        android:layout_margin="@dimen/edit_text_email_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/user_login_text"/>
    <LinearLayout
        android:id="@+id/linear_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_hint_et"
            android:layout_margin="@dimen/edit_text_email_margin"
            />
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_hint_et"
            android:layout_margin="@dimen/edit_text_password_margin"/>
        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_login_text"
            />
        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/text_view_register_text"
            android:layout_margin="16dp"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>


</RelativeLayout>